# mt-training

./: .env.example  CHANGELOG.md  README.md  justfile  pyproject.toml  train.sh  train_test.sh
notebook/: train_nllb.ipynb
src/mt_training/: __init__.py  backtranslate.py  convert_ct2.py  eval.py  inference.py  train.py
