[project]
name = "mt-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MNIKIEMA", email = "nikiemamahamadi01@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "draccus>=0.11.5",
    "evaluate>=0.4.6",
    "python-dotenv>=1.2.2",
    "s3fs>=2026.2.0",
    "sacrebleu>=2.6.0",
    "torch>=2.8.0",
    "transformers>=5.5.0",
    "wandb>=0.23.0",
]

[project.scripts]
mt-training = "mt_training:main"

[project.optional-dependencies]
backtranslation = ["quickmt"]
ctranslate2 = ["ctranslate2"]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128" },
]
quickmt = [
  { git = "https://github.com/quickmt/quickmt.git" },
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.isort]
known-first-party = ["mt_training"]

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"

# Indent with spaces, rather than tabs.
indent-style = "space"

# Respect magic trailing commas.
skip-magic-trailing-comma = false

# Auto detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
testspath = [
    "tests"
]
addopts = "-ra -q"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]
